--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <title>Graydr</title>
   </head>
   <body>
-    <div id="root">
+    <div id="app">
+      <h1>Greetings, chirp-chirp friends!</h1>
     </div>
   </body>
 </html>
