Add Google authentication.

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-signin-client_id" content="88782678736-du0efqnc1erj4flcdph0da6hlhia63ib.apps.googleusercontent.com">
     <title>Graydr</title>
+    <script src="https://apis.google.com/js/platform.js"></script>
   </head>
   <body>
-    <div id="app">
-      <h1>Greetings, chirp-chirp friends!</h1>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
